Please view this file on the master branch, on stable branches it's out of date.

v 8.11.0 (unreleased)
  - Remove magic comments (`# encoding: UTF-8`) from Ruby files. !5456 (winniehell)
  - Fix CI status icon link underline (ClemMakesApps)
  - Fix of 'Commits being passed to custom hooks are already reachable when using the UI'
  - Add support for using RequestStore within Sidekiq tasks via SIDEKIQ_REQUEST_STORE env variable
  - Limit git rev-list output count to one in forced push check
  - Add green outline to New Branch button. !5447 (winniehell)
  - Retrieve rendered HTML from cache in one request
  - Nokogiri's various parsing methods are now instrumented
  - Make fork counter always clickable. !5463 (winniehell)
  - Remove `search_id` of labels dropdown filter to fix 'Missleading URI for labels in Merge Requests and Issues view'. !5368 (Scott Le)
  - Load project invited groups and members eagerly in `ProjectTeam#fetch_members`
  - Make branches sortable without push permission !5462 (winniehell)
  - Add GitLab Workhorse version to admin dashboard (Katarzyna Kobierska Ula Budziszewska)
  - Add the `sprockets-es6` gem
  - Multiple trigger variables show in separate lines (Katarzyna Kobierska Ula Budziszewska)
  - Profile requests when a header is passed

v 8.10.2 (unreleased)
  - User can now search branches by name. !5144
  - Fix backup restore. !5459
  - Rescue Rugged::OSError (lock exists) when creating references. !5497
  - Disable MySQL foreign key checks before dropping all tables. !5472
  - Fix a bug where forking a project from a repository storage to another would fail
  - Show release notes in tags list
  - Use project ID in repository cache to prevent stale data from persisting across projects. !5460
  - Ensure relative paths for video are rewritten as we do for images. !5474
  - Ensure current user can retry a build before showing the 'Retry' button. !5476
  - Fix expand all diffs button in compare view

v 8.10.1